--- a/Glossaries.IOS/Glossaries.IOS.csproj
+++ b/Glossaries.IOS/Glossaries.IOS.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Views\FirstView.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="Bootstrap\JsonPluginBootstrap.cs" />
+    <Compile Include="Views\LoginView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
