Altered Project to use Subscribers and Messengers MainView fixed up views Added Glossary ViewModel Fixed Login MainViewModel added List and Commands

--- a/Glossaries.IOS/Glossaries.IOS.csproj
+++ b/Glossaries.IOS/Glossaries.IOS.csproj
@@ -108,10 +108,10 @@
     <Compile Include="AppDelegate.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="DebugTrace.cs" />
-    <Compile Include="Views\FirstView.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
     <Compile Include="Bootstrap\JsonPluginBootstrap.cs" />
     <Compile Include="Views\LoginView.cs" />
+    <Compile Include="Views\MainView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
