--- a/Glossaries.Model/Glossaries.Model.csproj
+++ b/Glossaries.Model/Glossaries.Model.csproj
@@ -34,6 +34,7 @@
     <Compile Include="GlossaryModel.cs" />
     <Compile Include="UserModel.cs" />
     <Compile Include="ErrorModel.cs" />
+    <Compile Include="Messengers\UserMessenger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -50,5 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Messengers\" />
   </ItemGroup>
 </Project>
