Added StingLengthConverter Fleshed out GlossaryService Passing UserId through to Views Added GlossaryView Fixed up MainView Added GlossaryMessenger

--- a/Glossaries.IOS/Glossaries.IOS.csproj
+++ b/Glossaries.IOS/Glossaries.IOS.csproj
@@ -101,7 +101,6 @@
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
     <None Include="packages.config" />
-    <None Include="ToDo-MvvmCross\_ Touch UI.txt" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
@@ -112,6 +111,7 @@
     <Compile Include="Bootstrap\JsonPluginBootstrap.cs" />
     <Compile Include="Views\LoginView.cs" />
     <Compile Include="Views\MainView.cs" />
+    <Compile Include="Views\GlossaryView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
