Added Custom GlossaryCell Binding in Cells Custom cell Table Binding to Table

--- a/Glossaries.IOS/Glossaries.IOS.csproj
+++ b/Glossaries.IOS/Glossaries.IOS.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.xib" />
+    <InterfaceDefinition Include="Views\GlossaryCell.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -112,6 +113,10 @@
     <Compile Include="Views\LoginView.cs" />
     <Compile Include="Views\MainView.cs" />
     <Compile Include="Views\GlossaryView.cs" />
+    <Compile Include="Views\GlossaryCell.cs" />
+    <Compile Include="Views\GlossaryCell.designer.cs">
+      <DependentUpon>GlossaryCell.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
