Moved Interfaces into their own folder Added IVisible for page visibility Made all ViewModels use Visible for Messenger Unsubscribing Created BaseClasses for common Code on all Views Removed BackButton on Login and Main Added Logout

--- a/Glossaries.IOS/Glossaries.IOS.csproj
+++ b/Glossaries.IOS/Glossaries.IOS.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Views\GlossaryCell.designer.cs">
       <DependentUpon>GlossaryCell.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\BaseViewController.cs" />
+    <Compile Include="Views\BaseTableViewController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
