--- a/Glossaries.Core/Glossaries.Core.csproj
+++ b/Glossaries.Core/Glossaries.Core.csproj
@@ -69,6 +69,9 @@
     <Reference Include="Parse.iOS">
       <HintPath>..\packages\Parse.iOS\Parse.iOS.dll</HintPath>
     </Reference>
+    <Reference Include="Chance.MvvmCross.Plugins.UserInteraction">
+      <HintPath>..\packages\Chance.MvvmCross.Plugins.UserInteraction.1.1.4\lib\portable-win+net45+wp8+win8+wpa81\Chance.MvvmCross.Plugins.UserInteraction.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
